@@ -36,15 +36,15 @@ $base_path      = ereg_replace("config", "", $this_pathinfo['dirname']) . "/";
 global $config;
 
 $config['installed']	= 0;
-$config['cache'] = 'C:\Program Files\Apache Group\Apache2\htdocs\solidstate-0.4\solidworks/smarty/cache';
-$config['compiled'] = 'C:\Program Files\Apache Group\Apache2\htdocs\solidstate-0.4\solidworks/smarty/templates_c';
+$config['cache']	= 'cache';
+$config['compiled']	= 'templates_c';
 $config['encoded']	= 1;
 
 global $db;
 
-$db['host'] = 'localhost';
-$db['user'] = 'cm9vdA==';
-$db['pass'] = 'aGFtbGluNjQ=';
-$db['database'] = 'solidstate';
+$db['host'] 		= '';
+$db['user'] 		= '';
+$db['pass'] 		= '';
+$db['database'] 	= '';
 $db['encoded']		= 1;
 ?>
