@@ -73,6 +73,11 @@
                validate="true"
                required="true">
           <enum>
+            <option value="AUD" description="Australian Dollar"/>
+            <option value="CAD" description="Canadian Dollar"/>
+            <option value="EUR" description="Euro"/>
+            <option value="GBP" description="Pound Sterling"/>
+            <option value="JPY" description="Japanese Yen"/>
             <option value="USD" description="United States Dollar"/>
           </enum>
         </field>
