@@ -1,3 +1,8 @@
+9/7/2006 - jdiamond
+====================
+
+ * (trac #113) Added a "currency" setting for the Paypal WPS module
+
 8/24/2006 - jdiamond
 ====================
 
